Added admin requirement

--- a/app.yaml
+++ b/app.yaml
@@ -4,7 +4,7 @@ handlers:
 - url: /
   static_files: index.html
   upload: index.html
-  login: required
+  login: admin
 
 - url: /(.*)
   static_files: \1
