--- a/app.yaml
+++ b/app.yaml
@@ -1,11 +1,11 @@
 runtime: python37
 
 handlers:
-- url: /
+- url: /ikea
   static_files: index.html
   upload: index.html
   login: admin
 
-- url: /(.*)
+- url: /ikea/(.*)
   static_files: \1
   upload: (.*)
