Fix path for resources v3

--- a/app.yaml
+++ b/app.yaml
@@ -2,10 +2,10 @@ runtime: python37
 
 handlers:
 - url: /ikea
-  static_files: index.html
-  upload: index.html
+  static_files: /ikea/index.html
+  upload: ikea/index.html
   login: admin
 
-- url: /(.*)
-  static_files: \1
-  upload: (.*)
+- url: /ikea/(.*)
+  static_files: ikea/\1
+  upload: ikea/(.*)
